--- a/styles/main.css
+++ b/styles/main.css
@@ -6,10 +6,14 @@
 
 #chatbox{
 	width: 90%;
-	min-height: 10em;
+	height: 20em;
 	border: solid 4px black;
 	text-align: center;
 	margin: 10px auto;
+	overflow: scroll;
+
+
+
 }
 
 #usernamebox {
