--- a/styles/main.css
+++ b/styles/main.css
@@ -1,55 +1,88 @@
 .header{
 	text-align: center;
 	font-size: 40px;
-	font-family: 'droid sans' serif;
+	font-family: 'Orbitron', sans-serif;
 	padding: 1em 0 1em 0;
-	margin-top: 2em;
-	color: white;
+	margin: .5em 8em 0 8em;
+	color: rgb(84,79,76);
 	font-weight: bold;
-	background-color: rgb(28,172,240);
+	background-color: rgb(225,213,197);
 	margin-bottom: 1em;
+	border: solid 4px rgb(84,79,76);
+	border-radius: 50px;
 }
 
 body {
-	background-color:rgb(236, 146, 189);
+	background-color:rgb(224,82,96);
+	color: rgb(84,79,76);
+
 	
 }
 #chatbox{
-	width: 80%;
-	height: 15em;
-	border: solid 4px black;
+	
+	height: 19em;
+	border: solid 4px rgb(84,79,76);
 	/*margin: 10px auto;*/
 	font-family: 'droid sans' serif;
 	padding: 0 1em 0 1em;
 	overflow: scroll;
-	margin: 0 2em 0 2em;
-	font-size: 1.25em;
+	margin-right: 2em;
+	margin-left: 2em;
+	font-size: 1em;
 	color: black;
-	background-color: rgb(170,180,110);
-	position: relative;
+	background-color: rgb(225,213,197);
+	border-radius: 50px;
+	/*position: relative;*/
 }
 .usernamesubmitbox {
 	margin-left: 3em;
 	margin-top: 1em;
 	font-family: 'droid sans' serif;
+	font-size: 1.2em;
+	width: 50em;
 }
 
 #usernamebox {
 	text-align: center;
 	margin-left: 0.7em;
+	background-color: rgb(225,213,197);
+	border: solid 2px rgb(84,79,76);
+	border-radius: 50px;
+	font-family: 'droid sans' serif;
+	height: 2em;
+	width: 20em;
+
+
 }
 #messagebox {
 	text-align: center;
 	margin-left: 1.75em;
+	background-color: rgb(225,213,197);
+	width: 50em;
+	border: solid 2px rgb(84,79,76);
+	border-radius: 50px;
+	font-family: 'droid sans' serif;
+	height: 2em;
+
+
 }
 #submit {
 	text-align: center;
-	padding-bottom: 5px;
+	
+	background-color: rgb(225,213,197);
+	display: inline-block;
+	border-radius: 50px;
+	width: 7em;
+	margin-left: 1em;
+	border: solid 2px rgb(84,79,76);
+	font-family: 'droid sans' serif;
+	height: 2.4em;
+
 }
 
 .row {
 border-bottom: solid 1px black;
-color: black;
+color: rgb(84,79,76);
 
 }
 
