--- a/styles/main.css
+++ b/styles/main.css
@@ -2,8 +2,8 @@
 	text-align: center;
 	font-size: 40px;
 	font-family: 'Orbitron', sans-serif;
-	padding: 1em 0 1em 0;
-	margin: .5em 1em 0 1em;  
+	padding: 1em 1em 1em 0em;
+	margin: .5em 1em 0 1.5em;  
 /*	margin: .5em 8em 0 8em; save this for when you go to full screen*/
 	color: rgb(84,79,76);
 	font-weight: bold;
@@ -27,7 +27,7 @@ body {
 	padding: 0 1em 0 1em;
 	overflow: scroll;
 /*	margin-right: 2em;*/
-	margin-left: 2em;
+	margin: 0 1em 0 2em;
 	font-size: 1em;
 	color: black;
 	background-color: rgb(225,213,197);
@@ -35,11 +35,11 @@ body {
 }
 
 #usernamemessagesubmit {
-	margin-left: 3em;
+	margin-left: 3.75em;
 	margin-top: 1em;
 	font-family: 'droid sans' serif;
 	font-size: 1.2em;
-	width: 50em;
+	/*width: 50em;*/
 }
 
 #usernamebox {
@@ -158,6 +158,9 @@ color: rgb(84,79,76);
 	margin-left: 2em;
 }
 @media (min-width: 1040px){
+.header{
+		margin: .5em 8em 0 8em;
+	}
 .submit{
 		float: left;
 		margin-left: 0.5em;
